updated app.py with exception handling to debug issues.

--- a/.env
+++ b/.env
@@ -50,6 +50,8 @@ LLM_MODEL_NAME="gemini-2.0-flash-001"
 # LLM creativity/randomness (0.0 for deterministic, 1.0 for highly creative)
 LLM_TEMPERATURE=0.2
 
+MODEL_MODE="adk_agent_engine"
+
 # --- Document Processing Configuration (for RAG corpus upload) ---
 # Size of document chunks for RAG (in tokens)
 RAG_CHUNK_SIZE=500
