--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ docstring_parser==0.16
 exceptiongroup==1.3.0
 fastapi==0.115.12
 filetype==1.2.0
-Flask==3.0.3
+Flask[async]==3.0.3
 Flask-Cors==4.0.1
 frozenlist==1.6.2
 fsspec==2025.5.1
