--- a/crawler/Dockerfile-crawl4ai
+++ b/crawler/Dockerfile-crawl4ai
@@ -1,20 +1,23 @@
-# Use a slim Python 3.10 Debian-based image as the base.
+# Use a slim Python 3.12 Debian-based image as the base.
 # This provides a minimal Python environment on a glibc-based Linux distribution,
 # which is compatible with Playwright's pre-built browser binaries.
-FROM python:3.10-slim-buster
+FROM python:3.12-slim-bookworm
 
 # Set environment variables for Python buffering.
 ENV PYTHONUNBUFFERED=1
 
-# Install system-level dependencies required by Playwright browsers.
-# These include essential libraries for rendering web content (fonts, graphics, etc.).
+# Set the working directory inside the container.
+WORKDIR /app
+
+# Install system-level dependencies for Python build tools and Playwright browsers.
+# 'build-essential' provides compilers and dev tools.
+# The Playwright dependencies are standard for Debian/Ubuntu.
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    # General utilities (optional, but often useful)
+    build-essential \
     curl \
     unzip \
-    # Playwright browser runtime dependencies for Debian/Ubuntu:
-    # Based on Playwright's official Docker images for dependencies.
+    # Playwright browser runtime dependencies
     libnss3 \
     libnspr4 \
     libdbus-1-3 \
@@ -29,32 +32,36 @@ RUN apt-get update && \
     libxkbcommon0 \
     libxrandr2 \
     xdg-utils \
-    # Fonts, critical for rendering web pages correctly
     fonts-liberation \
     fonts-noto-color-emoji \
     # Clean up apt caches to reduce image size
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Set the working directory inside the container.
-WORKDIR /app
-
 # Upgrade pip to the latest version.
-RUN pip install --upgrade pip
+RUN pip install --no-cache-dir --upgrade pip
 
-# Install crawl4ai (which includes playwright as a dependency)
-# Ensure this step and the playwright install step are in the same RUN command
-# to guarantee the 'playwright' module is available immediately after pip installation.
-RUN pip install --no-cache-dir \
-    crawl4ai[all] && \
-    # Install Playwright browser binaries for Chromium, Firefox, and WebKit.
-    # This downloads the actual browser executables into the Docker image.
-    python3 -m playwright install
+# Install crawl4ai and its 'all' dependencies, which includes the 'playwright' Python package.
+# This also makes 'crawl4ai-setup' and 'crawl4ai-doctor' available in the PATH.
+RUN pip install --no-cache-dir crawl4ai[all]
 
-# You can add your Python script here if you want to run it directly
-# COPY your_script.py .
+# Install Playwright browser binaries and their *system* dependencies.
+# The '--with-deps' flag tells Playwright to install missing OS dependencies.
+# This ensures Playwright's browsers are fully set up.
+# RUN python3 -m playwright install --with-deps
 
-# Command to run your application. For testing, you might just want to keep the container running.
-# Example: CMD ["python3", "your_script.py"]
-# For interactive use, let's default to bash.
+# Run crawl4ai's post-installation setup.
+# This initializes crawl4ai's internal database and performs other configurations.
+# It should run smoothly as Playwright browsers and dependencies are already handled.
+# We call it directly as it's now in the PATH.
+RUN crawl4ai-setup
+RUN playwright install --with-deps
+
+# Optional: Run diagnostics to confirm everything is functioning.
+# This is typically for verification during development or CI.
+# You can uncomment the line below if you want to run this during the build,
+# but it's often more useful to run interactively after the container starts.
+RUN crawl4ai-doctor
+
+# Command to run your application. For interactive use, default to bash.
 CMD ["bash"]
